--- a/form-02/css/style.css
+++ b/form-02/css/style.css
@@ -78,7 +78,20 @@
 .content-box .form-box .content form .terms{
     margin-left: 13px;
 }
-.content-box .form-box .content form .terms input{height: 10px;width: 10px;-webkit-appearance: none;-moz-appearance: none;-o-appearance: none;appearance: none;border: 2px solid #ff9a9c;border-radius: 20px;outline: none;transition-duration: 0.3s;background-color: transparent;cursor: pointer;}
+.content-box .form-box .content form .terms input{
+	height: 10px;
+	width: 10px;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	-o-appearance: none;
+	appearance: none;
+	border: 2px solid #ff9a9c;
+	border-radius: 20px;
+	outline: none;
+	transition-duration: 0.3s;
+	background-color: transparent;
+	cursor: pointer;
+}
 .content-box .form-box .content form .terms input:checked{
 	border: 1px solid pink;
     background-color: pink;
@@ -105,6 +118,8 @@
     font-size: 17px;
     text-transform: uppercase;
     letter-spacing: 2px;
+	cursor: pointer;
+
 }
 .content-box .form-box .content form .signup p{
     color: gray;
